# flashcards

./: .clang-format  CMakeLists.txt  Makefile
.cache/clangd/index/: Deck.cpp.CDD30263382E76BC.idx  Deck.h.B250ACA6029F9B0A.idx  Deck_tests.cpp.E1893A69EDE9897F.idx  Flashcard.cpp.BC8C853E8D1E8840.idx  Flashcard.h.D4F544364D04EC87.idx  Flashcard_tests.cpp.EB21BF9CBAF3A7EB.idx  Quiz.cpp.EB434F0EA2D423E8.idx  Quiz.h.BF3997941C7AD9BA.idx  Quiz_tests.cpp.ECF3E577FD2A100A.idx  main.cpp.0F396E20C0DC4CCC.idx
docs/: README.md
imports/: test1.csv
includes/: Deck.h  Flashcard.h  Flashcards_deck.h  Importer.h  Parser.h  Quiz.h  flashcard.h  flashcards_deck.h
src/: CMakeLists.txt  Deck.cpp  Flashcard.cpp  Flashcards_deck.cpp  Importer.cpp  Quiz.cpp  flashcard.cpp  flashcards_deck.cpp  main.cpp
tests/: CMakeLists.txt  Deck_tests.cpp  Flashcard_tests.cpp  Importer_tests.cpp  Quiz_tests.cpp
